# frontend-example-view

./: Cargo.toml  Makefile  index.html  index.scss
src/: lib.rs  main.rs
src/todo/: detail.rs  list.rs
