[package]
name = "rust-frontend-example-view"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
gloo-net = "0.4.0"
serde = "1.0.189"
serde_derive = "1.0.189"
serde_json = "1.0.107"
wasm-bindgen = "0.2.87"
yew = { version= "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
